--- a/gomoku/js/tsconfig.json
+++ b/gomoku/js/tsconfig.json
@@ -1,7 +1,8 @@
 {
     "compilerOptions": {
-        "jsx": "react",
-        "target": "ES6",
-        "moduleResolution": "node",
+      "noImplicitAny": true,
+      "jsx": "react",
+      "target": "ES2015",
+      "moduleResolution": "Node"
     }
-}
+  }
