--- a/gomoku/js/package.json
+++ b/gomoku/js/package.json
@@ -18,6 +18,8 @@
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-webpack-plugin": "^4.0.1",
+    "style-loader":"^3.3.3",
+    "css-loader":"^6.8.1",
     "ts-loader": "^9.5.0",
     "typescript": "^5.2.2",
     "webpack": "^5.89.0",
