--- a/gomoku/js/src/.eslintrc.json
+++ b/gomoku/js/src/.eslintrc.json
@@ -3,6 +3,13 @@
     "browser": true,
     "es2021": true
   },
+  "rules": {
+    "react/prop-types": "off",
+    "no-var": "off",
+    "@typescript-eslint/no-unused-vars": "off",
+    "react/jsx-key": "off",
+    "prefer-const": "off"
+  },
   "extends": [
     "eslint:recommended",
     "plugin:@typescript-eslint/recommended",
