--- a/gomoku/js/package.json
+++ b/gomoku/js/package.json
@@ -29,6 +29,7 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "lodash": "^4.17.21",
     "react-router-dom": "^6.18.0"
   }
 }
