--- a/gomoku/js/src/.eslintrc.json
+++ b/gomoku/js/src/.eslintrc.json
@@ -8,7 +8,11 @@
     "no-var": "off",
     "@typescript-eslint/no-unused-vars": "off",
     "react/jsx-key": "off",
-    "prefer-const": "off"
+    "prefer-const": "off",
+    "react-hooks/exhaustive-deps": "off",
+    "no-extra-boolean-cast": "off",
+    "@typescript-eslint/no-explicit-any": "off",
+    "@typescript-eslint/no-var-requires": "off"
   },
   "extends": [
     "eslint:recommended",
