--- a/code/js/src/.eslintrc.json
+++ b/code/js/src/.eslintrc.json
@@ -4,15 +4,10 @@
     "es2021": true
   },
   "rules": {
-    "react/prop-types": "off",
-    "no-var": "off",
-    "@typescript-eslint/no-unused-vars": "off",
-    "react/jsx-key": "off",
-    "prefer-const": "off",
-    "react-hooks/exhaustive-deps": "off",
-    "no-extra-boolean-cast": "off",
-    "@typescript-eslint/no-explicit-any": "off",
-    "@typescript-eslint/no-var-requires": "off"
+    "react/prop-types" : "off",
+    "@typescript-eslint/no-explicit-any" : "off",
+    "@typescript-eslint/no-var-requires" : "off",
+    "react-hooks/exhaustive-deps" : "off"
   },
   "extends": [
     "eslint:recommended",
